--- a/src/components/Location/WeatherByLocation.scss
+++ b/src/components/Location/WeatherByLocation.scss
@@ -1,55 +1,48 @@
-.page-header {
-    padding-top: 200px;
-}
-
-.weather-cards-container {
+.weather-container {
     display: flex;
-    height: 500px;
-    overflow-x: auto;
     flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 2rem;
 }
-
-.weather-hour {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 100%;
-    flex-wrap: wrap;
-}
-
-.weather-hour-child {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-shrink: 0;
-    width: calc(100% / 1);
-   // padding: 8px;
-}
-
-// .weather-hour-child {
-//     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-//     display: flex;
-//     flex-direction: row;
-//     flex-basis: 15%;
-//     flex-grow: 0;
-//     flex-shrink: 0;
-//     width: 20%;
-// }
 
 .hour-detail {
-    font-weight: bold;
-}
-
-ul {
-    list-style-type: none;
-}
-
-p {
     padding: 2px;
 }
 
-h4 {
-    margin: 0%;
+.hour-table {
+    display: table-cell;
+    border: 1px solid;
+    border-collapse: collapse;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    // padding: 10px;
+}
+
+.hour-table th {
+
+    font-weight: bold;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+    padding: 5px;
+    background-color: #f2f2f2;
+}
+
+.hour-table tr {
+    text-align: center;
+    font-weight: lighter;
+}
+
+.hour-table td {
+    padding: 5px;
+}
+
+.hour-table p {
+    margin: 0;
+    font-size: 14px;
+    font-weight: normal;
+    text-align: center;
+}
+
+.hour-table .small-font {
+    font-size: 12px;
 }
