--- a/src/index.scss
+++ b/src/index.scss
@@ -21,7 +21,7 @@ a {
 }
 
 a:hover {
-  color: rgb(214, 77, 77);
+  color: rgb(52, 163, 227);
 }
 
 h1 {
@@ -31,23 +31,29 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid rgb(52, 163, 227);
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 
+input {
+  border-radius: 4px;
+  border: 1px solid rgb(52, 163, 227);
+}
+
 button:hover {
-  border-color: rgb(246, 177, 177);
+  border-color: rgb(52, 163, 227);
 }
 
 button:focus,
+input:focus,
+input:focus-visible,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: 2px auto rgb(52, 163, 227);
 }
 
 @media (prefers-color-scheme: light) {
@@ -57,7 +63,7 @@ button:focus-visible {
   }
 
   a:hover {
-    color: rgb(246, 177, 177);
+    color: rgb(52, 163, 227);
   }
 
   button {
