--- a/src/components/Forecast/Forecast.scss
+++ b/src/components/Forecast/Forecast.scss
@@ -2,62 +2,15 @@
     padding-top: 200px;
 }
 
-
 p {
     color: rgb(52, 163, 227);
 }
 
-.temperature {
-    background-color: rgb(231, 183, 94);
-    padding: 2px;
-}
-
-.weather-cards-container {
-    align-items: center;
-}
-
-.weather-day {
-    display: flex;
-    align-items: center;
-}
-
-.weather-hour {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.hour-table {
-    padding: 0px;
-    //  border-right: none;
-    margin: 10px;
-}
-
 table {
-    align-items: center;
+    text-align: center;
+    margin: 0 auto;
     border: 2px solid black;
 }
-
-// .weather-hour {
-
-//     display: flex;
-//     justify-content: space-between;
-//     flex-direction: row;
-//     width: 100%;
-//     flex-wrap: wrap;
-// }
-
-.weather-hour-child {
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-shrink: 0;
-    align-items: center;
-    //   width: calc(100% / 1);
-
-}
-
 
 ul {
     list-style-type: none;
@@ -71,15 +24,15 @@ ul {
     font-weight: bold;
 }
 
+.hour-icons-container td,
+th {
+    border-right: 1px solid #ccc;
+}
 
+.span-data {
+    text-align: left;
+}
 
-// .hour-table {
-//     padding: 0px;
-//     //  border-right: none;
-
-// }
-
-// table {
-//     align-items: center;
-//     border: 2px solid black;
-// }
+.temperature {
+    background-color: rgb(237, 186, 93);
+}
