--- a/src/components/Forecast/Forecast.scss
+++ b/src/components/Forecast/Forecast.scss
@@ -1,9 +1,20 @@
+h2 {
+    text-align: left;
+    font-size: 25px;
+}
+
+
 .page-header {
-    padding-top: 200px;
+    padding-top: 100px;
+    font-size: 20px;
+}
+
+.form-input {
+    font-size: 20px;
 }
 
 p {
-    color: rgb(52, 163, 227);
+    color: rgb(244, 240, 124);
 }
 
 table {
