--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+body{
+  background-color: rgb(100, 179, 218);
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
