--- a/src/components/Forecast/Forecast.scss
+++ b/src/components/Forecast/Forecast.scss
@@ -47,3 +47,8 @@ th {
 .temperature {
     background-color: rgb(237, 186, 93);
 }
+
+.day-info-table-header,
+.day-info-table {
+    border: none;
+}
