--- a/src/components/Forecast/Forecast.scss
+++ b/src/components/Forecast/Forecast.scss
@@ -1,25 +1,53 @@
-.day-container {
-    width: 80%;
-}
-
-
 h2 {
     text-align: left;
     font-size: 25px;
+    color: rgb(234, 164, 79);
+    font-family: inherit;
 }
-
 
 .page-header {
     padding-top: 100px;
     font-size: 20px;
+    color: rgb(130, 177, 177);
 }
 
-.form-input {
+input {
+    border-radius: 4px;
+    border: 1px solid rgb(52, 163, 227);
+    font-size: 20px;
+    font-family: inherit;
+}
+
+b {
+    color: rgb(234, 164, 79);
     font-size: 20px;
 }
 
+button {
+    border-radius: 8px;
+    background-color: rgb(102, 157, 189);
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 300;
+    font-family: inherit;
+    cursor: pointer;
+    transition: border-color 0.25s;
+}
+
+
+button:hover {
+    border-color: rgb(52, 163, 227);
+}
+
+button:focus,
+input:focus,
+input:focus-visible,
+button:focus-visible {
+    outline: 2px auto rgb(52, 163, 227);
+}
+
 p {
-    color: rgb(244, 240, 124);
+    color: rgb(108, 175, 135);
 }
 
 table {
@@ -64,15 +92,13 @@ th {
     // overflow-x: scroll;
 }
 
-
 .day-selector {
     position: sticky;
-    justify-content: center;
+    align-content: center;
     align-items: center;
     border-radius: 10px;
     border: 2px solid transparent;
 }
-
 
 .selected-day-selector {
 
@@ -82,16 +108,11 @@ th {
     border-radius: 5px;
 }
 
-
-
 .day-container {
     position: absolute;
     width: 70%;
     margin: 0 auto;
 }
-
-
-
 
 .scroll-buttons-container {
     display: flex;
