--- a/src/components/Forecast/Forecast.scss
+++ b/src/components/Forecast/Forecast.scss
@@ -68,7 +68,6 @@ ul {
     list-style-type: none;
 }
 
-
 .small-font {
     font-size: 12px;
 }
@@ -85,29 +84,17 @@ th {
 .span-data {
     text-align: left;
     padding: 6px;
-    //  position: absolute;
 }
 
 .temperature {
     background-color: rgb(237, 186, 93);
 }
 
-
-
 .weather-cards-container {
     display: flex;
-    // overflow-x: scroll;
+    justify-content: center;
+    width: 100%;
 }
-
-.day-selector {
-    // position: sticky;
-    align-content: center;
-    align-items: center;
-    border-radius: 10px;
-    border: 2px solid transparent;
-}
-
-
 
 .day-info-table-header,
 .day-info-table {
@@ -120,32 +107,36 @@ th {
 
 }
 
-// .weather-day li {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     justify-content: center;
-//     height: 100%;
-//   //  padding-top: 500px;
-// }
+.day-selector {
+    align-content: center;
+    align-items: center;
+    border-radius: 10px;
+    border: 2px solid transparent;
+    z-index: 5;
+}
 
-
-.day-container {
-    position: absolute;
+.weather-day li {
     display: flex;
-    justify-content: center;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+
+    .selected-day-selector {
+        padding: 2px 16px;
+        box-shadow: 0 4px 8px 0 rgb(76, 178, 198);
+        transition: 0.3s;
+        border-radius: 5px;
+    }
+
+    .day-container {
+        position: absolute;
+        top: 65%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
 }
-
-.selected-day-selector {
-
-    padding: 2px 16px;
-    box-shadow: 0 4px 8px 0 rgb(76, 178, 198);
-    transition: 0.3s;
-    border-radius: 5px;
-}
-
-
 
 .scroll-buttons-container {
     display: flex;
